Ioc utilisant Spring (xml)