@@ -14,18 +14,18 @@ public class Presentation2 {
     public static void main(String[] args) throws Exception {
         Scanner sc = new Scanner(new File("config.txt"));
 
-        String daoClassName = sc.nextLine();
-        Class cDao = Class.forName(daoClassName);
+        String daoClassName = sc.nextLine();//lire la classe de dichier config
+        Class cDao = Class.forName(daoClassName);//Charger la classe dans la memoire
         //Object dao = cDao.newInstance();
-        IDao d = (IDao) cDao.newInstance();//Pour specifier de quel objet s'agit il
+        IDao d = (IDao) cDao.newInstance();//Instancier la classe(Pour specifier de quel objet s'agit il)
 
         String metierClassName = sc.nextLine();
         Class cMetier = Class.forName(metierClassName);
-        //Object dao = cDao.newInstance();
-        //IMetier metier = (IMetier) cMetier.getConstructor(IDao.class).newInstance(d);
-        IMetier metier = (IMetier) cMetier.getConstructor().newInstance();
-        Method setDao = metier.getClass().getDeclaredMethod("setDao",IDao.class);//metier.getDeclaredMethod()
-        setDao.invoke(metier,d);//execute setDao using invoke method in metier, with d parameter
+        Object dao = cDao.newInstance();
+        IMetier metier = (IMetier) cMetier.getConstructor(IDao.class).newInstance(d);//IL est preferable de faire l'injection avec le constructeur
+        //IMetier metier = (IMetier) cMetier.getConstructor().newInstance();
+        //Method setDao = metier.getClass().getDeclaredMethod("setDao",IDao.class);//metier.getDeclaredMethod()
+        //setDao.invoke(metier,d);//execute setDao using invoke method in metier, with d parameter
         System.out.println("Res : "+metier.calcul());
     }
 }
